2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c (maze_dialog): use separate variables
	for width and height entry. Fixes bug #480303.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerwheel.c (gimp_controller_wheel_scroll):
	fixed check for modifier keys and always return on a matched
	event(bug #480319). Also reordered the list of events as the code
	does not any longer rely on a certain order.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c: minor cleanup, removed unused code.

2007-09-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagebox.c (gimp_message_box_constructor):
	left-align the image.

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/actions/file-commands.c
	* app/actions/templates-commands.c: use more meaningful stock
	icons for message dialogs.

2007-09-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/decompose.c: reverted "fix" for bug #477008.

	* tools/pdbgen/pdb/display.pdb
	* app/pdb/display_cmds.c: flush the image before creating a new
	display for it. Fixes bug #477008 also for other plug-ins like
	Screenshot.

2007-09-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_widget_accel_changed):
	show the keyboard shortcut in brackets, as we do in other places.

2007-09-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/fuzzyborder.scm: Applied patch from
	Ulf-D. Ehlert which pushes and pops a context to prevent
	changing background colour in the UI. Fixes bug #479974.

2007-09-24  Matic Zgur  <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINUGAS.

2007-09-24  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: fixed error on how many points get
	initialized.
	* app/pdb/vectors_cmds.c: regenerated

	Probably fixes bug #479790.

2007-09-24  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: removed const qualifiers